--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -8,16 +8,12 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        otp:
-          - 25.3.2-1
-        elixir:
-          - 1.14.5
-        arch:
-          - amd64
+        builder:
+          - 5.2-7:1.15.7-26.1.2-1
         os:
           - ubuntu22.04
     runs-on: ubuntu-latest
-    container: ghcr.io/emqx/emqx-builder/5.1-3:${{ matrix.elixir }}-${{ matrix.otp }}-${{ matrix.os }}
+    container: ghcr.io/emqx/emqx-builder/${{ matrix.builder }}-${{ matrix.os }}
 
     steps:
       - uses: actions/checkout@v2
