--- a/rebar.config
+++ b/rebar.config
@@ -4,14 +4,14 @@
 {deps,
  [
   {sext, "1.8.0"},
-  {rocksdb, {git, "https://github.com/emqx/erlang-rocksdb.git", {tag, "1.8.0-emqx-5"}}}
+  {rocksdb, {git, "https://github.com/emqx/erlang-rocksdb.git", {tag, "1.8.0-emqx-8"}}}
  ]}.
 
 {profiles,
  [
   {test,
    [
-    {deps, [ {proper, "1.3.0"}
-           , {meck, "0.9.0"}]}
+    {deps, [ {proper, {git, "https://github.com/proper-testing/proper", {tag, "v1.5.0"}}}
+           , {meck, "0.9.2"}]}
    ]}
  ]}.
